    input automata (previous versions would use the input automaton
    whenever the parser would manage to read something).

  - autfilt learned --is-colored to filter automata that use
    exactly one acceptance set per mark or transition.

  - ltlcross, ltldo, and autcross learned shorthands to call
    delag, ltl2dra, ltl2dgra, and nba2dpa.

  Library:

  - You can now specify to Spot the number of acceptance marks you
    wish to use. This is a compile-time option, accessible through
    option --with-nb-acc of the configure script. The default is
    still 32, but this limit is no longer hardcoded.

  - Option "a" of print_dot(), for printing the acceptance condition,
    is now enabled by default.  Option "A", introduced in Spot 2.4,
    can be used to hide the acceptance condition in case you do not
    want it.  This change of course affects the --dot option of all
    the command-line tools, as well as the various way to display
    automata using the Python bindings.

  - When option "1" is passed to print_dot() to hide state names
    and force the display of state numbers, the actual state names
    is now moved to the "tooltip" field of the state.  The SVG
    files produced by "dot -Tsvg" will show those as popups.
    This is also done for state labels of kripke structures.

  - print_dot() will now name the output digraph using the name of the
    automaton if available, or the empty string otherwise.  (Previous
    versions used to call all digraphs "G".)  This name appears as a
    tooltip in SVG figures when the mouse is over the acceptance
    condition.

  - print_dot() has a new option "u" to hide "true states" behind
    "exiting transitions".  This can be used to display alternating
    automata in a way many people expect.

  - print_dot() has a new option "K" to cancel the effect of "k"
    (which uses state labels whenever possible).  This is most useful
    when one want to force transition-labeling of a Kripke structure,